remove Java 9 deprecations